Settings: Fix color picker on small panel sizes (#6360)

--- a/src/components/left/settings/folders/SettingsFolders.scss
+++ b/src/components/left/settings/folders/SettingsFolders.scss
@@ -118,23 +118,39 @@
 }
 
 .color-picker {
+  overflow-x: auto;
   display: flex;
-  gap: 1rem;
+  gap: 0.75rem;
   align-items: center;
 
-  min-height: 3rem;
-  padding: 0 1rem 1rem;
+  margin-inline: 1rem;
+  padding: 0.125rem;
+}
+
+.color-picker-header {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: space-between;
+
+  padding-inline-end: 1rem;
+}
+
+.color-picker-title-text,
+.color-picker-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .color-picker-title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-inline-end: 1rem;
+  flex-shrink: 0;
 }
 
 .color-picker-item {
   cursor: pointer;
+
+  flex-shrink: 0;
 
   width: 1.5rem;
   height: 1.5rem;
@@ -175,6 +191,7 @@
   &:hover,
   &:active {
     border: 0.125rem solid var(--color-background);
+    outline: none;
     box-shadow: 0 0 0 0.125rem currentColor;
   }
 }
